--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,6 @@
     Copyright 2013, Red Hat, Inc. and/or its affiliates, and individual
     contributors by the @authors tag. See the copyright.txt in the
     distribution for a full listing of individual contributors.
-
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
@@ -91,6 +90,12 @@
                </exclusion>
            </exclusions>
        </dependency>
+       <dependency>
+           <groupId>javax.servlet</groupId>
+           <artifactId>servlet-api</artifactId>
+           <version>2.5</version>
+       </dependency>
+
 
    </dependencies>
 
