--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -97,6 +97,13 @@
             <scope>test</scope>               
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
