--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -104,6 +104,12 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
