--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -110,6 +110,12 @@
             <version>1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
