--- a/web/pom.xml
+++ b/web/pom.xml
@@ -118,7 +118,15 @@
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
        </dependency>
-      
+
+       <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+       <dependency>
+           <groupId>commons-codec</groupId>
+           <artifactId>commons-codec</artifactId>
+           <version>1.10</version>
+       </dependency>
+
+
 
 
    </dependencies>
